package org.example.unixFileSearch.predicates;

public interface CompositePredicate extends Predicate{
}
